--- a/less/navigation.less
+++ b/less/navigation.less
@@ -63,9 +63,11 @@
         // Easier CSS Animation
         
             &:hover {
-                animation-name: @navItemsAnimation;
+                animation-name: navItemsAnimation;
                 animation-duration: 3s;
-
+                
+                @media @phone {
+                }
             }
     }
 
